# reasoning-boosts-llm-alignment

./: .gitignore  README.md  pyproject.toml
config/: politicians.yaml
src/reasoning/: baseline.py  common.py  main.py
src/reasoning/rewards/: __init__.py  answer_in_completion_reward.py  confidence_aware_reward.py  confidence_components.py  entailment_reward.py  format_reward.py  length_reward.py  reward_function_abc.py  simple_confidence_reward.py
