[project]
name = "Reasoning"
version = "0.0.1"
description = "Arguing is just opinionated reasoning."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "datasets>=3.4.1",
    "fast-langdetect>=0.3.2",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "trl<0.19.0",
   "unsloth==2025.5.7",
]

[dependency-groups]
dev = ["ruff >= 0.8.1", "pytest >= 8.3.4"]

[project.scripts]
reasoning = "reasoning.main:main"
reasoning-baseline = "reasoning.baseline:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src/reasoning"]
